--- a/.github/workflows/main_test1231241234.yml
+++ b/.github/workflows/main_test1231241234.yml
@@ -9,48 +9,34 @@ on:
       - main
   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+env:
+  AZURE_WEBAPP_NAME: reactapptutorial # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: .
+  NODE_VERSION: "14.x" # set this to the node version to use
 
+jobs:
+  build-and-deploy:
+    name: Build and Deploy
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up Node.js version
+      - name: Use Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
-
+          node-version: ${{ env.NODE_VERSION }}
       - name: npm install, build, and test
         run: |
+          # Build and test the project, then
+          # deploy to Azure Web App.
           npm install
           npm run build --if-present
           npm run test --if-present
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: node-app
-          path: .
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: node-app
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: add process.json
+        run: |
+          echo '{ script: "serve", env: { PM2_SERVE_SPA: "true", PM2_SERVE_HOMEPAGE: "/index.html" } }' >> build/process.json
+      - name: "Deploy to Azure WebApp"
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'test1231241234'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6D6CF397DD97430DAFDA39699697F9D8 }}
-          package: .
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
