Added correct YAML publish profile

--- a/.github/workflows/main_test1231241234.yml
+++ b/.github/workflows/main_test1231241234.yml
@@ -33,9 +33,11 @@ jobs:
       - name: add process.json
         run: |
           echo '{ script: "serve", env: { PM2_SERVE_SPA: "true", PM2_SERVE_HOMEPAGE: "/index.html" } }' >> build/process.json
-      - name: "Deploy to Azure WebApp"
+      - name: "Deploy to Azure Web App"
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          app-name: "test1231241234"
+          slot-name: "Production"
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6D6CF397DD97430DAFDA39699697F9D8 }}
+          package: .
