--- a/public/web.config
+++ b/public/web.config
@@ -1,23 +1,6 @@
 <?xml version="1.0"?>
 <configuration>
     <system.webServer>
-
-        <directoryBrowse enabled="false"/>
-
-        <urlCompression doDynamicCompression="true" doStaticCompression="true"/>
-
-        <!-- <staticContent>
-            <clientCache cacheControlMaxAge="120.00:00:00" cacheControlMode="UseMaxAge"/>
-        </staticContent> -->
-        <caching enabled="true" enableKernelCache="true">
-            <profiles>
-                <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
-                <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
-                <add extension=".svg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
-                <add extension=".png" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange"/>
-            </profiles>
-        </caching>
-
         <rewrite>
             <rules>
                 <rule name="React Routes" stopProcessing="true">
@@ -27,10 +10,12 @@
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
                         <add input="{REQUEST_URI}" pattern="^/(api)" negate="true" />
                     </conditions>
-                    <action type="Rewrite" url="/index.html" />
+                    <action type="Rewrite" url="/" />
                 </rule>
             </rules>
         </rewrite>
-
+        <staticContent>
+             <mimeMap fileExtension=".otf" mimeType="font/otf" />
+        </staticContent>
     </system.webServer>
 </configuration>
