--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "target": "es2016",
     "lib": ["dom", "dom.iterable", "esnext", "es2017"],
     "allowJs": true,
