--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#sanity
+/sanity/node_modules
+/sanity/logs
+/sanity/*.log
+/sanity/dist
+/sanity/coverage
